test: configure Robolectric for Java 17